# cmake-cppcli-poc

./: CMakeLists.txt  CMakeSettings.json  README.md  azure-pipelines.yml
HornsHoofs.ReverseService/: CMakeLists.txt  IReverseService.h  ReverseService.cpp  ReverseService.h
HornsHoofs.ReverseService.Tests/: HornsHoofs.ReverseService.Tests.csproj  HornsHoofs.ReverseService.Tests.sln  ReverseServiceTests.cs
cmake-mixed-mode/: CMakeLists.txt  IReverseService.h  ReverseService.cpp  ReverseService.h  cmake-mixed-mode.cpp
libreverse/: CMakeLists.txt  reverser.cpp
libreverse/include/: reverser.h
